# printer-mcp

./: .dockerignore  .gitignore  Dockerfile  LICENSE  README.md  package-lock.json  package.json  pyproject.toml
.claude/skills/printer/: SKILL.md
.github/deepseek/: prompt.md
.github/workflows/: ci.yml  publish.yml
src/: index.test.ts  index.ts  metrics.ts  tools.ts
src/printer_mcp/: __init__.py  __main__.py  _stub_pages.py  config.py  ipp.py  jobs.py  latex.py  metrics.py  pdf.py  server.py
tests/: _ipp_helpers.py  conftest.py  test_ipp.py  test_protocol.py
