[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "printer-mcp"
version = "1.0.0"
description = "MCP server for the Brother HL-L2865DW printer — LaTeX compile → IPP submit → per-page reveal"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT-0" }
authors = [{ name = "Douglas Gardner" }]

dependencies = [
    "mcp[cli]>=1.10.0",
    "starlette>=0.40.0",
    "uvicorn[standard]>=0.30.0",
    "prometheus-client>=0.20.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "httpx>=0.27",
    "asgi-lifespan>=2.1",
    "ruff>=0.6",
]

[project.scripts]
printer-mcp = "printer_mcp.__main__:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "session"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B"]
